(rule
 (targets irmin_bindings.ml irmin.c irmin.h)
 (deps
  (:gen ../gen/generate.exe))
 (action
  (run %{gen} .)))

(library
 (name irmin_c)
 (modules)
 (libraries libirmin_bindings)
 (foreign_stubs
  (language c)
  (names irmin)
  (flags -Wno-unused-variable)))

(executable
 (name libirmin)
 (libraries irmin_c)
 (modes shared_object)
 (modules libirmin irmin_bindings)
 (flags
  (:standard -w -unused-var-strict))
 (enabled_if
  (and
   (<> %{ocaml_version} 5.2.0~alpha1)
   (<> %{system} "linux"))))

(executable
 (name libirmin)
 (libraries irmin_c)
 (modes shared_object)
 (modules libirmin irmin_bindings)
 (flags
  (:standard -w -unused-var-strict -ccopt "-Wl,-znow"))
 (enabled_if
  (and
   (<> %{ocaml_version} 5.2.0~alpha1)
   (= %{system} "linux"))))

(install
 (package libirmin)
 (section lib)
 (files
  (irmin.h as include/irmin.h)
  (libirmin%{ext_dll} as lib/libirm%{ext_dll}))
 (enabled_if
  (<> %{ocaml_version} 5.2.0~alpha1)))
